# agent-harness

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
agent/: __init__.py  loop.py  models.py
data/: generate_dataset.py
docs/adr/: 001-deterministic-shell.md  002-handrolled-loop.md  003-litellm-not-openrouter.md  004-eval-strategy.md  005-mcp-governed-socket.md  006-no-containers.md  007-phoenix-over-langfuse.md  008-github-mcp-trust-boundary.md  009-sqlglot-ast-sql-guard.md
evals/: __init__.py  run_judge_metrics.py  test_evals.py
evals/cases/: 001_schema_query.yaml  002_ticket_approval.yaml  003_sql_injection.yaml  004_multi_turn_schema_then_query.yaml  005_budget_enforced_deny.yaml  006_drop_table_denied.yaml  007_truncate_denied.yaml  008_unknown_tool_denied.yaml  009_create_ticket_full_flow.yaml  010_mcp_describe_schema_approval.yaml  011_insert_denied.yaml  012_cost_by_service_query.yaml  013_no_number_invention.yaml
harness/: __init__.py  audit.py  backends.py  budget.py  contracts.py  hooks.py  mcp_adapter.py  policy.py  redact.py  sql_guard.py  tracing.py
mcp_server/: __init__.py  server.py
policies/: default.yaml
scripts/: chat.py  demo_determinism.py  demo_policy.py  demo_run.py  record_evals.py  upload_evals_to_phoenix.py
tests/: __init__.py  test_audit.py  test_budget.py  test_contracts.py  test_create_ticket_backends.py  test_hooks.py  test_policy.py  test_redact.py  test_sql_guard.py
tools/: __init__.py  create_ticket.py  describe_schema.py  echo.py  generate_report.py  query_data.py
