[project]
name = "agent-harness"
version = "0.1.0"
description = "A deterministic shell for probabilistic agents"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "litellm>=1.40",
    "duckdb>=0.10",
    "pyiceberg[duckdb]>=0.7",
    "mcp>=1.0",
    "langfuse>=2.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "deepeval>=1.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-pyyaml",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["harness", "agent", "tools"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "RUF"]

[tool.mypy]
strict = true
python_version = "3.12"

[[tool.mypy.overrides]]
module = ["litellm.*", "langfuse.*", "deepeval.*", "duckdb.*", "pyiceberg.*", "mcp.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "evals"]
