[project]
name = "agent-harness"
version = "0.1.0"
description = "A deterministic shell for probabilistic agents"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13",
    "pydantic-settings>=2.14",
    "litellm>=1.90",
    "duckdb>=1.5",
    "pyiceberg[duckdb]>=0.7",
    "mcp>=1.28",
    "rich>=14.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "sqlglot>=25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
    "ruff>=0.15",
    "mypy>=2.0",
    "types-pyyaml",
    "arize-phoenix>=17.0",
    "arize-phoenix-evals>=3.0",
    "openinference-instrumentation-litellm>=0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["harness", "agent", "tools"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "RUF"]

[tool.mypy]
strict = true
python_version = "3.12"

[[tool.mypy.overrides]]
module = ["litellm.*", "duckdb.*", "pyiceberg.*", "mcp.*", "phoenix.*", "openinference.*", "opentelemetry.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "evals"]
